changes to the new samples -v1

--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -30,20 +30,23 @@
                 <ul class="list-group" style="margin-left: -10px; margin-right: -10px;">
                     <li class="list-group-item">
                         <span class="pull-right" style="color: gray;"><i class="fa fa-fw fa-comments-o"></i> 4 </span>
-                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc review <span
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>Resolution is too low <span
                             style="color: gray; padding-left: 8px;">Fri, Dec19, 2014</span>
                     </li>
                     <li class="list-group-item">
                         <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 3 </span>
-                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc 123
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>Grain boundaries
+                        <span style="color: gray; padding-left: 8px;">Sun, Dec10, 2014</span>
                     </li>
                     <li class="list-group-item">
                         <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 2</span>
-                        <i class="fa fa-fw fa fa-minus-circle" style="color: red;"></i>defg454354
+                        <i class="fa fa-fw fa fa-minus-circle" style="color: red;"></i>Data Analysis report
+                        <span style="color: gray; padding-left: 8px;">Tue, Nov21, 2014</span>
                     </li>
                     <li class="list-group-item">
                         <span class="pull-right"><i class="fa fa-fw fa-comments-o"></i> 4 </span>
-                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>abc review git
+                        <i class="fa fa-fw fa fa-circle" style="color: green;"></i>Temperature is too high
+                        <span style="color: gray; padding-left: 8px;">Thu, Oct8, 2014</span>
                     </li>
 
                 </ul>
@@ -98,27 +101,26 @@
 
                                 <div class="row"
                                      style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">
-                                    This is a test comment.
+                                     I have reviewed these attachments and sample need more testing.
                                 </div>
                             </div>
                             <div class="row">
-                                <i class="fa fa-fw fa-user"></i> huaying@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span><br><br>
+                                <i class="fa fa-fw fa-user"></i> jfadams@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span><br><br>
 
                                 <div class="row"
                                      style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">
-                                    This is a test comment.
+                                  Glenn can you take a look at it once?
                                 </div>
                             </div>
                             <div class="row">
-                                <i class="fa fa-fw fa-user"></i> huaying@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span><br><br>
+                                <i class="fa fa-fw fa-user"></i> jfadams@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span><br><br>
 
                                 <div class="row"
-                                     style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;">
-                                    This is a test comment.
+                                     style="background-color: white;padding: 10px;border: 1px solid #d3d3d3;"> I had run this at 50F and 6V settings
                                 </div>
                             </div>
                             <div class="row">
-                                <i class="fa fa-fw fa-user"></i> tammasr@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span>
+                                <i class="fa fa-fw fa-user"></i> jfadams@umich.edu <span style="padding-left: 5px;">Fri, Dec19, 2014</span>
                                 <br><br>
 
                                 <div class="row">
