--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -35,10 +35,12 @@
         </div>
     </div>
     <br> <br> <br>
-    <!--<div class="row" >-->
+
+    <!--<div class="row">-->
     <!--<div class="col-xs-3" style="padding: 40px;background-color: white">-->
     <!--<div class="row">-->
-    <!--<input ng-model="email" name="email" required="" class="form-control" placeholder="Email..." type="email">-->
+    <!--<input ng-model="email" name="email" required="" class="form-control" placeholder="Email..."-->
+    <!--type="email">-->
     <!--</div>-->
     <!--<br>-->
 
@@ -49,13 +51,14 @@
 
     <!--<div class="row">-->
     <!--<div class="col-xs-6">-->
-    <!--<input type="checkbox" ng-model="rememberMe">    Remember me-->
+    <!--<input type="checkbox" ng-model="rememberMe"> Remember me-->
     <!--</div>-->
     <!--<div class="col-xs-5">-->
     <!--Forgot Password?-->
     <!--</div>-->
     <!--</div>-->
     <!--<br>-->
+
     <!--<div class="row">-->
     <!--<button class="btn btn-default btn-primary" style="width: 100%" ng-click="login()">Login</button>-->
     <!--</div>-->
