commit home page update

--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -24,6 +24,7 @@
             <a ng-click="createProcess()" title="Add Process">
                 <i class="fa fa-fw fa-plus"></i>
             </a>
+        </span>
     </div>
     <div class="panel-body home-panel-body"
          ng-class="{'no-max-height': isExpanded()}">
@@ -40,4 +41,9 @@
             </li>
         </ul>
     </div>
+</div>
+<div class="panel panel-default">
+     <div class="panel panel-heading">
+
+     </div>
 </div>
