--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -1,4 +1,4 @@
-<div class="row" style="background-color: #6194B3; margin-bottom: 0px">
+<div class="row" style="background-color: #518394; margin-bottom: 0px">
     <div class="col-xs-3">
         <ul style="padding-left: 5px;" class="taskbar nav nav-tabs">
             <li class="dropdown">
