--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -1,49 +1,68 @@
-<div class="panel panel-primary">
-    <div class="panel-heading processes-color home-panel-heading">
-        <i class="fa fa-fw fa-code-fork bold"></i>
-        <span>
-            Processes
-            ({{procs.length}})
-        </span>
-        <span ng-if="false" class="pull-right bar-control">
-            <a ng-click="splitScreen('processes', 'column2')">
-                <i class="fa fa-fw"
-                   ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
-            </a>
-            <a ng-click="minimize()">
-                <i class="fa fa-fw fa-minus"></i>
-            </a>
-            <a ng-click="toggleExpanded()">
-                <i class="fa fa-fw"
-                   ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>
-            </a>
-        </span>
-        <input type="text" ng-model="search.name" class="pull-right col-xs-4"
-               placeholder="Search processes...">
-        <span class="add-item pull-right">
-            <a ng-click="createProcess()" title="Add Process">
-                <i class="fa fa-fw fa-plus"></i>
-            </a>
-        </span>
+<!--<div class="panel panel-primary">-->
+    <!--<div class="panel-heading processes-color home-panel-heading">-->
+        <!--<i class="fa fa-fw fa-code-fork bold"></i>-->
+        <!--<span>-->
+            <!--Processes-->
+            <!--({{procs.length}})-->
+        <!--</span>-->
+        <!--<span ng-if="false" class="pull-right bar-control">-->
+            <!--<a ng-click="splitScreen('processes', 'column2')">-->
+                <!--<i class="fa fa-fw"-->
+                   <!--ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>-->
+            <!--</a>-->
+            <!--<a ng-click="minimize()">-->
+                <!--<i class="fa fa-fw fa-minus"></i>-->
+            <!--</a>-->
+            <!--<a ng-click="toggleExpanded()">-->
+                <!--<i class="fa fa-fw"-->
+                   <!--ng-class="{'fa-expand': !isExpanded(), 'fa-compress': isExpanded()}"></i>-->
+            <!--</a>-->
+        <!--</span>-->
+        <!--<input type="text" ng-model="search.name" class="pull-right col-xs-4"-->
+               <!--placeholder="Search processes...">-->
+        <!--<span class="add-item pull-right">-->
+            <!--<a ng-click="createProcess()" title="Add Process">-->
+                <!--<i class="fa fa-fw fa-plus"></i>-->
+            <!--</a>-->
+        <!--</span>-->
+    <!--</div>-->
+    <!--<div class="panel-body home-panel-body"-->
+         <!--ng-class="{'no-max-height': isExpanded()}">-->
+        <!--<ul class="list-unstyled">-->
+            <!--<li class="home-item"-->
+                <!--ng-class="{'open-item-details': process.showDetails}"-->
+                <!--ng-repeat="process in bk.all | filter:search | event:project.date:project.nextdate as procs">-->
+                <!--<display-process process="process"-->
+                                 <!--show-sideboard="true">-->
+                <!--</display-process>-->
+            <!--</li>-->
+            <!--<li ng-show="procs.length === 0" class="home-item">-->
+                <!--<div> No processes.</div>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</div>-->
+<div class="row">
+    <div class="panel panel" style="border: 1px solid #d3d3d3;">
+        <div class="panel-heading" style="padding-top: 20px;">
+            <img style="height: 35px;padding-bottom: 10px;"
+                 src="assets/img/splash/process-icon.png">
+            <span style="color: #3A9EE3; font-size: 20px;padding-left: 15px;">PROCESS</span>
+        </div>
+        <div class="panel-body home-panel-body"
+             ng-class="{'no-max-height': isExpanded()}">
+            <ul class="list-unstyled">
+                <li class="home-item"
+                    ng-class="{'open-item-details': process.showDetails}"
+                    ng-repeat="process in bk.all | filter:search | event:project.date:project.nextdate as procs">
+                    <display-process process="process"
+                                     show-sideboard="true">
+                    </display-process>
+                </li>
+                <li ng-show="procs.length === 0" class="home-item">
+                    <div> No processes.</div>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="panel-body home-panel-body"
-         ng-class="{'no-max-height': isExpanded()}">
-        <ul class="list-unstyled">
-            <li class="home-item"
-                ng-class="{'open-item-details': process.showDetails}"
-                ng-repeat="process in bk.all | filter:search | event:project.date:project.nextdate as procs">
-                <display-process process="process"
-                                 show-sideboard="true">
-                </display-process>
-            </li>
-            <li ng-show="procs.length === 0" class="home-item">
-                <div> No processes.</div>
-            </li>
-        </ul>
-    </div>
-</div>
-<div class="panel panel-default">
-     <div class="panel panel-heading">
-
-     </div>
 </div>
