--- a/website/app/application/core/projects/project/home/directives/home-review-details.html
+++ b/website/app/application/core/projects/project/home/directives/home-review-details.html
@@ -1,13 +1,16 @@
 <div>
     <div class="row item-details">
         <div class="col-sm-5">
-            <b>Assigned to:</b> <span ng-show="model.filter_by"> <b><a ng-click="clearMessageFilter()">Clear</a></b> </span>
+            <b>Assigned to:</b> <span ng-show="model.filter_by"> <b><a
+                ng-click="clearMessageFilter()">Clear</a></b> </span>
             <ul class="list-group">
                 <li class="list-group-item">
-                    <a style="color: #000000;" ng-class="{underline: model.filter_by !== ''}" ng-click="filterMessagesByWho(review.assigned_to)">{{review.assigned_to}}</a>
+                    <a style="color: #000000;" ng-class="{underline: model.filter_by !== ''}"
+                       ng-click="filterMessagesByWho(review.assigned_to)">{{review.assigned_to}}</a>
                     <span ng-click="filterMessagesByWho(review.assigned_to)" class="pull-right">
-                        <i class="fa fa-fw fa-comments-o cursor-pointer"></i> <span class="badge badge-superscript-count"
-                                                                     style="float: none; top: -5px;">{{model.count}}</span>
+                        <i class="fa fa-fw fa-comments-o cursor-pointer"></i> <span
+                            class="badge badge-superscript-count"
+                            style="float: none; top: -5px;">{{model.count}}</span>
                     </span>
                 </li>
             </ul>
@@ -16,17 +19,18 @@
             <b> <i class="fa fa-fw fa-paperclip"></i> Attachments:</b>
             <ul class="list-group">
                 <li class="list-group-item" ng-repeat="item in review.attachments">
-                    <i class="fa fa-fw" ng-class="{'fa-cubes': item.type === 'sample', 'fa-file': item.type === 'file', 'fa-edit': item.type === 'note'}"
+                    <i class="fa fa-fw"
+                       ng-class="{'fa-cubes': item.type === 'sample', 'fa-file': item.type === 'file', 'fa-edit': item.type === 'note'}"
                        style="color: #256188" class="fa fa-fw fa-folder fa-file"></i>
                     {{item.name | truncate: 25: '...'}}
-
                 </li>
             </ul>
         </div>
     </div>
     <div class="row">
         <span>
-            <button ng-click="model.addComment = !model.addComment" class="btn btn-xs btn-mini btn-success">comment</button>
+            <button ng-click="model.addComment = !model.addComment" class="btn btn-xs btn-mini btn-success">comment
+            </button>
             <button ng-click="closeReview(review)" data-toggle="modal"
                     data-target="#confirm-close-review"
                     class="btn btn-xs btn-mini btn-danger">close
@@ -44,12 +48,12 @@
                         <span class="pull-left">
                             <i class="fa fa-fw fa-user fa-1x"></i>  {{comment.who}}
                         </span><br>
-                        <small style="padding-left: 20px;" class="text-muted">{{comment.date}}</small>
+                    <small style="padding-left: 20px;" class="text-muted">{{comment.date}}</small>
                 </div>
 
                 <div class="row">
-                        <div style="padding-left: 10px;" ta-bind="text" ta-readonly='disabled'
-                            ng-model="comment.message"></div>
+                    <div style="padding-left: 10px;" ta-bind="text" ta-readonly='disabled'
+                         ng-model="comment.message"></div>
                 </div>
             </div>
         </div>
