--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -1,101 +1,104 @@
-<nav class="navbar navbar-custom navbar-fixed-top" ng-controller="_indexNavigation">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand"
-           ng-click="goHome()">MaterialsCommons</a>
-    </div>
-    <div class="collapse navbar-collapse">
-        <ul ng-hide="email_address" class="nav navbar-nav navbar-right">
-            <li>
-                <a ui-sref="login" class="navbar-link larg-text">
-                    <i class="fa fa-fw fa-user"></i>
-                    login
-                </a>
-            </li>
-        </ul>
-        <ul ng-show="email_address" class="nav navbar-nav navbar-right">
+<div ng-show="email_address" ng-controller="_indexNavigation">
+    <nav class="navbar navbar-custom navbar-fixed-top" >
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand"
+               ng-click="goHome()">MaterialsCommons</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul ng-hide="email_address" class="nav navbar-nav navbar-right">
+                <!--<li>-->
+                <!--<a ui-sref="login" class="navbar-link larg-text">-->
+                <!--<i class="fa fa-fw fa-user"></i>-->
+                <!--login-->
+                <!--</a>-->
+                <!--</li>-->
+            </ul>
+            <ul ng-show="email_address" class="nav navbar-nav navbar-right">
 
-            <li>
-                <a ng-click="goHome()"
-                   class="navbar-link large-text">
-                    <i class="fa fa-fw fa-home space-right"></i>
-                    Home
-                </a>
-            </li>
-            <li>
-                <a class="large-text"
-                   ng-click="toggleHelp()">
-                    <i class="fa fa-fw fa-question space-right"></i>
-                    Help
-                </a>
-            </li>
-            <li ng-class="{ navactive: isActiveStep('reviews') }">
-                <a class="dropdown-toggle large-text" data-toggle="dropdown">
-                    <i class="fa fa-comment space-right"></i> Reviews
+                <li>
+                    <a ng-click="goHome()"
+                       class="navbar-link large-text">
+                        <i class="fa fa-fw fa-home space-right"></i>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a class="large-text"
+                       ng-click="toggleHelp()">
+                        <i class="fa fa-fw fa-question space-right"></i>
+                        Help
+                    </a>
+                </li>
+                <li ng-class="{ navactive: isActiveStep('reviews') }">
+                    <a class="dropdown-toggle large-text" data-toggle="dropdown">
+                        <i class="fa fa-comment space-right"></i> Reviews
                     <span ng-controller="globalReviewsController"
-                         style="background-color: rgba(255, 255, 255, 0.3)" class="badge ng-binding">
+                          style="background-color: rgba(255, 255, 255, 0.3)" class="badge ng-binding">
                         {{(reviews | byKey:'status':'open').length}}
                     </span>
-                </a>
-                <div class="dropdown-menu reviews-dropdown nav-dropdown-scrollbar">
-                    <!--directive-->
-                    <global-reviews></global-reviews>
-                    <!--<div  global-reviews class="" ></div>-->
-                </div>
-            </li>
-            <li>
-                <a ng-click="showStep('machines')" ui-sref="machines"
-                   class="navbar-link large-text">
-                    <i class="fa fa-fw fa-gears space-right"></i>
-                    Machines
-                </a>
-            </li>
+                    </a>
+                    <div class="dropdown-menu reviews-dropdown nav-dropdown-scrollbar">
+                        <!--directive-->
+                        <global-reviews></global-reviews>
+                        <!--<div  global-reviews class="" ></div>-->
+                    </div>
+                </li>
+                <li>
+                    <a ng-click="showStep('machines')" ui-sref="machines"
+                       class="navbar-link large-text">
+                        <i class="fa fa-fw fa-gears space-right"></i>
+                        Machines
+                    </a>
+                </li>
 
-            <li class="dropdown divider">
-                <a ng-click="showStep('email')" class="dropdown-toggle large-text" data-toggle="dropdown">
-                    <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
-                    <span class="caret caret-light"></span>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <li>
-                        <a ui-sref="account.password">
-                            <i class="fa fa-fw fa-unlock-alt space-right"></i>
-                            Change Password
-                        </a>
-                    </li>
-                    <li>
-                        <a ui-sref="account.settings">
-                            <i class="fa fa-fw fa-user space-right"></i>
-                            Account Settings
-                        </a>
-                    </li>
+                <li class="dropdown divider">
+                    <a ng-click="showStep('email')" class="dropdown-toggle large-text" data-toggle="dropdown">
+                        <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
+                        <span class="caret caret-light"></span>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a ui-sref="account.password">
+                                <i class="fa fa-fw fa-unlock-alt space-right"></i>
+                                Change Password
+                            </a>
+                        </li>
+                        <li>
+                            <a ui-sref="account.settings">
+                                <i class="fa fa-fw fa-user space-right"></i>
+                                Account Settings
+                            </a>
+                        </li>
 
-                    <li>
-                        <a ui-sref="account.templates">
-                            <i class="fa fa-fw fa-list-alt space-right"></i>
-                            Templates
-                        </a>
-                    </li>
-                    <li>
-                        <a ui-sref="account.apikey">
-                            <i class="fa fa-fw fa-key space-right"></i>
-                            Apikey
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a ui-sref="logout">
-                            <i class="fa fa-fw fa-sign-out space-right"></i>
-                            Logout
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-</nav>
+                        <li>
+                            <a ui-sref="account.templates">
+                                <i class="fa fa-fw fa-list-alt space-right"></i>
+                                Templates
+                            </a>
+                        </li>
+                        <li>
+                            <a ui-sref="account.apikey">
+                                <i class="fa fa-fw fa-key space-right"></i>
+                                Apikey
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a ui-sref="logout">
+                                <i class="fa fa-fw fa-sign-out space-right"></i>
+                                Logout
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+</div>
