splash page notes

--- a/website/app/application/core/splash.html
+++ b/website/app/application/core/splash.html
@@ -6,9 +6,8 @@
             </div>
             <div class="row">
                 <div class="login-splash">
-                    <div class="row">
-                        <div  class="row">
-                            <input  ng-model="email" name="email" required="" class="form-control"
+                        <div class="row">
+                            <input ng-model="email" name="email" required="" class="form-control"
                                    placeholder="Email..."
                                    type="email">
                         </div>
@@ -31,11 +30,10 @@
                         <br>
 
                         <div class="row">
-                            <button class="btn btn-default btn-primary" style="width: 100%" ng-click="login()">
+                            <button class="btn btn-primary btn-lg" style="width: 100%;" ng-click="login()">
                                 Login
                             </button>
                         </div>
-                    </div>
                 </div>
             </div>
 
@@ -96,10 +94,9 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        A portfolio website, for example, would probably be best shown in a fixed-width layout, so that
-                        you
-                        have
-                        more control over the design.</p>
+                        Have a quick overview or dive into rich details about your processes. See the inputs and outputs
+                        of each process and discover the relationships between the processes.
+                    </p>
 
                 </div>
                 <div class="col-xs-2">
@@ -132,15 +129,13 @@
                 <div class="col-xs-5">
                     <div class="row"><br><br><br>
                         <img style="height: 40px;" src="assets/img/splash/sample_icon.png">
-                        <span style="font-size: 18px; font-weight: 500">Create Samples</span>
+                        <span style="font-size: 18px; font-weight: 500">Handle Samples</span>
                     </div>
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        A portfolio website, for example, would probably be best shown in a fixed-width layout, so that
-                        you
-                        have
-                        more control over the design.</p>
+                     Create a sample and keep track of the whole process of the experiments and research on its segments and transforms.
+                    </p>
                 </div>
             </div>
         </div>
@@ -165,17 +160,14 @@
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        A portfolio website, for example, would probably be best shown in a fixed-width layout, so that
-                        you
-                        have
-                        more control over the design.</p>
+                        Ask for reviews of your files and samples. Get involved in conversations over your team's research findings.</p>
 
                 </div>
                 <div class="col-xs-1">
 
                 </div>
                 <div class="col-xs-4">
-                    <img  style="height: 400px;" src="assets/img/splash/review.png">
+                    <img style="height: 400px;" src="assets/img/splash/review.png">
                 </div>
 
             </div>
@@ -199,15 +191,13 @@
                 <div class="col-xs-6">
                     <div class="row"><br><br><br>
                         <img style="height: 40px;" src="assets/img/splash/file_icon.png">
-                        <span style="font-size: 18px; font-weight: 500">Upload Files</span>
+                        <span style="font-size: 18px; font-weight: 500">Manage Files</span>
                     </div>
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        A portfolio website, for example, would probably be best shown in a fixed-width layout, so that
-                        you
-                        have
-                        more control over the design.</p>
+                     Easy upload, download and preview of your files.
+                      </p>
 
                 </div>
             </div>
@@ -227,15 +217,13 @@
                 <div class="col-xs-4">
                     <div class="row"><br><br><br>
                         <img style="height: 40px;padding-right: 10px;" src="assets/img/splash/note_icon.png">
-                        <span style="font-size: 18px; font-weight: 500">Manage Notes</span>
+                        <span style="font-size: 18px; font-weight: 500">Attach Notes</span>
                     </div>
                     <br>
 
                     <p style="padding-left: 25px; color: grey; font-size: 16px; font-family: 'Helvetica Neue', Helvetica, Ariel, sans-serif;">
-                        A portfolio website, for example, would probably be best shown in a fixed-width layout, so that
-                        you
-                        have
-                        more control over the design.</p>
+                    Add notes to samples or files to help memorize your updates to them. Or simply jot down lines for your reference.
+                    </p>
 
                 </div>
                 <div class="col-xs-2">
