--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,17 +1,17 @@
-<div class="row">
-    <div class="col-xs-3">
-        <div class="pull-left">
-            <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation"><a
-                        ng-class="{'tool-inactive': !showPanel('calendar'), 'tool-active': showPanel('calendar')}"
-                        ng-click="openPanel('calendar')" title="Event Calendar">
-                    <i class="fa fa-fw fa-1x fa-calendar"></i>
-                </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+<!--<div class="row">-->
+    <!--<div class="col-xs-3">-->
+        <!--<div class="pull-left">-->
+            <!--<ul class="nav nav-tabs" role="tablist">-->
+                <!--<li role="presentation"><a-->
+                        <!--ng-class="{'tool-inactive': !showPanel('calendar'), 'tool-active': showPanel('calendar')}"-->
+                        <!--ng-click="openPanel('calendar')" title="Event Calendar">-->
+                    <!--<i class="fa fa-fw fa-1x fa-calendar"></i>-->
+                <!--</a>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->  <br>
 <div>
     <div class="row" style="padding-left: 15px">
         <div ui-view></div>
